--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "express": "^4.13.3",
     "socket.io": "^1.3.7"
-  }
-  ,"start": "node index.js"
+  },
+  "start": "node index.js"
 }
