--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pong game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,7 @@
     "express": "^4.13.3",
     "socket.io": "^1.3.7"
   },
-  "start": "node index.js"
+  "engines": {
+    "node": "0.12.7"
+  }
 }
