--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.4.8",
     "bootstrap": "^3.3.6",
     "express": "^4.13.3",
     "socket.io": "^1.3.7"
